<?xml version="1.0"?>
<package>
  <name>lsd_slam_core</name>
  <version>0.0.1</version>
  <description>Large-Scale Direct Monocular SLAM</description>
  <maintainer email="engelj@in.tum.de">Jakob Engel</maintainer>
  <license>see http://vision.in.tum.de/lsdslam</license>
  <url type="website">http://vision.in.tum.de/lsdslam</url>
  <author email="engelj@in.tum.de">Jakob Engel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>lsd_slam_viewer</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>lsd_slam_viewer</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>

</package>
