<?xml version="1.0"?>
<package>
  <name>lsd_slam_msgs</name>
  <version>0.0.0</version>
  <description>The lsd_slam_msgs package</description>

  <maintainer email="fonglong.luo@gmail.com">Fanglong Luo</maintainer>
  
  <license>BSD</license>

  <author email="fonglong.luo@gmail.com">Fanglong Luo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>

</package>